fix mobile align issue

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,12 +8,12 @@
 
 .sjtu-card {
     width: 80%;
-    border: 1px solid rgba(0,0,0,.125);
-    border-radius: .25rem;
+    border: 1px solid rgba(0, 0, 0, 0.125);
+    border-radius: 0.25rem;
     padding: 1rem;
     margin-left: auto;
     margin-right: auto;
     margin-top: 0.5rem;
     margin-bottom: 1rem;
-    box-shadow: 0 1px 3px rgba(0,0,0,.05),0 8px 13px rgba(0,0,0,.1);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05), 0 8px 13px rgba(0, 0, 0, 0.1);
 }
